# fe4transsrc-archive

./: Makefile  Makefile.cfg  Makefile.cfg.in  ProjectVersion  README  README.boo  README.jay  TODO  config.cache  config.h  config.h.in  config.status  configure  configure.in  fe4-j2e.sif  fe4.zst  patch-update.sh  readme.txt  remaining.rat  tmpchtsr.___
autom4te.cache/: output.0  requests  traces.0
backup/: unusedanddeleted.txt
dcenc/: Makefile  dcenc.asm  dcenc.b  dcenc.sif
fe4cv/: Makefile  README  char.cg  fe4cv.c  fe4rippl.c
fe4d/: Makefile  evil.c  fe4.euc  fe4d  fe4d.c  fe4dr  fe4dr.c  fe4fd  fe4fd.c  fe4ga  fe4ga.c  fe4pg  fe4pg.c  fe4sjd  fe4sjd.c  mkspec.sh
fe4dec/: Makefile  fe4dec  fe4dec.c
fe4doc/: 6restriction.txt  BlockInsertion.txt  cc.txt  events.txt  fe4enc.txt  fe4info.txt  fe4menu.rtf  main.txt  palette.txt  pointer.txt
fe4enc/: Makefile  append.c  dup2x.c  fe4enc  fe4enc.c  fe4enc.h  io.c  lz77.c  menufont.sif  rle.c
fe4font/: Makefile  README  english.tbl  font.bin.bak  font.sif  font.vwf  genwid  genwid.c  vwftable.sif
fe4p/: Makefile  fe4p  fe4p.c  fe4s  fe4s.c  testend3.bls  testend3.bpr  testend3.sif  testend3.txt  wid2c  wid2c.c  widths.c
include/: sif.h
misc/: Makefile  mkcp  mkcp.c  scriptstat  scriptstat.c  sifstub  sifstub.c
newscripts/: JTECbattlescripts.txt  JTECchapternumbers.txt  JTECdeathscripts.txt  JTECdemobattles.txt  JTECdemotalks.txt  JTECendingnarration.txt  JTECendingnarrationsp.txt  JTECintermissionnames.txt  JTEClovescripts.txt  conditions.sjis.txt  cscastle.txt  datascreentitles.txt  dynamic1.txt  dynamic2.txt  dynamic3.txt  dynamic4.txt  japanesefromfemain.txt  mainmenu.txt  objandturns.txt  receive.txt  status.txt  statusreform.txt  teamrelations.sjis.txt  welcomeback.txt
patches/: fe4-short-weapons.patch
rat/: README  battlescripts.rat  battlescripts.rat.orig  cscastle.rat  deathscripts.rat  dict.rat  dynamic.rat  dynamic1.rat  dynamic2.rat  dynamic3.rat  dynamic4.rat  fe4.rat  fe4jap.rat  further.rat.disable  further2.rat  mainmenu.rat
script/: 6restrict.txt  Makefile  army.txt  battle.txt  battle.txt.dis  battleconv.txt  battleinfobox.txt  battleopts.txt  battleopts2.txt  castlemenu.txt  chapternumbers.txt  chrnam.txt  chronology.txt  city.txt  classes.txt  conditions.txt  config.txt  configchoices.txt  configtext.txt  cscastle.txt  datascreentitles.txt  death.txt  death.txt.dis  eddanaming.txt  enm1.txt  fe4.tbl  fe4_00.txt  fe4_01.txt  fe4_02.txt  fe4_03.txt  fe4_04.txt  fe4_04_2a.txt  fe4_05.txt  fe4_06.txt  fe4_06_2a.txt  fe4_07.txt  fe4_08.txt  fe4_09.txt  fe4_09_2a.txt  fe4_0A.txt  (+59 more)
tools/: qparse.pl
